feat:Adding the log in and create gists

--- a/src/styles/components/_colors.scss
+++ b/src/styles/components/_colors.scss
@@ -5,4 +5,5 @@ $matter-supply-white:#F5F5F5;
 $matter-supply-grey2:#666666;
 $matter-supply-white-pure:#FFFFFF;
 $matter-supply-black:#000000;
-$matter-supply-white2:#D8D8D8
+$matter-supply-white2:#D8D8D8;
+$matter-supply-grey-3:#FCFCFC
